photoprism/mariadb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: mariadb
  serviceName: mariadb-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.9
        ports:
        - containerPort: 3306
          name: mariadbport
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/database.sql.gz
          name: database
          subPath: latest.photoprism.sql.gz

      - name: mariadb-cron-backup
        image: fradelg/mysql-cron-backup
        volumeMounts:
        - mountPath: /backup
          name: database
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: database-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: photoprism
spec:
  ports:
  - name: mariadbport
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
  type: ClusterIP
