photoprism/photoprism-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism-service
  namespace: photoprism
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  type: LoadBalancer
