photoprism/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism-service
  namespace: photoprism
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # For nginx ingress controller:
    kubernetes.io/ingress.class: nginx
    # Default is very low so most photo uploads will fail
    nginx.ingress.kubernetes.io/proxy-body-size: "512M"
    # If using cert-manager:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  name: photoprism
  namespace: photoprism
spec:
  rules:
  - host: ubuntu-server0.fritz.box
    http:
      paths:
      - backend:
          service:
            name: photoprism-service
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ubuntu-server0.fritz.box
    secretName: photoprism-cert
